@@ -1,0 +1,13 @@
+package org.cmdbuild.servlets.json.serializers;
+
+import static java.lang.annotation.ElementType.TYPE;
+import static java.lang.annotation.RetentionPolicy.SOURCE;
+
+import java.lang.annotation.Retention;
+import java.lang.annotation.Target;
+
+@Target(TYPE)
+@Retention(SOURCE)
+public @interface _Serializer {
+
+}
